fix embedding request

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,8 @@
 # API配置
 API_KEY=your_siliconflow_api_key_here
 BASE_URL=https://api.siliconflow.cn/v1
-MODEL_NAME=BAAI/bge-large-zh-v1.5
+MODEL_NAME=Qwen/Qwen3-Embedding-0.6B
+EMBEDDING_DIMENSIONS=1024
 
 # 服务器配置
 HOST=0.0.0.0
@@ -21,7 +22,6 @@ LOG_LEVEL=INFO
 # Meilisearch 配置
 MEILISEARCH_URL=http://127.0.0.1:7700
 MEILI_MASTER_KEY=your_master_key_here
-MEILI_ENV=development
 
 # 服务 URL（用于 Meilisearch embedder 配置）
 SERVICE_URL=http://embedding_proxy:8000
